--- a/src/assets/lang/en-US.json
+++ b/src/assets/lang/en-US.json
@@ -3,6 +3,7 @@
   "日志": "Log",
   "关于": "About Me",
   "留言": "Leave Words",
+  "归档": "Archiving",
   "杨舒Blog": "Blog",
   "页面不存在": "Sorry, the page you visited does not exist.",
   "菜单": "Menu "
